tests/NormalTests/paczka1/fuzzy1/12626418.err
Error in line 2: A466 S225 58,1
Error in line 10: oUyLeVV A192 82,8
Error in line 21: EMYx A192 48,8
Error in line 5: o9qOiSd S567 26,5
Error in line 22: NDLiVrqrO A466 110,3
Error in line 34: A466 S567 13,8
